# pharos-dehazing

./: .gitattributes  .gitignore  DESIGN.md  README.md  pyproject.toml
configs/: base.yaml  batch1.yaml  finetune_real.yaml  full.yaml  grit.yaml  local_sanity.yaml  overfit50.yaml  pod_full.yaml  reveal.yaml  vivid.yaml
scripts/: download_datasets.py  download_utils.py  pseudo_label.py  run_train.ps1  train_reveal.py  train_vivid.py
scripts/pod/: README.md  pull_ckpt.ps1  setup_pod.sh  sync_up.ps1
src/pharos/: __init__.py  config.py  contracts.py
src/pharos/data/: __init__.py  datasets.py  degradations.py  reveal_dataset.py  reveal_synthesis.py  synthesis.py  transforms.py
src/pharos/engine/: __init__.py  eval.py  logging.py  (+4 more)
tests/: conftest.py  test_data_datasets.py  test_data_degradations.py  test_data_synthesis.py  test_engine_eval.py  test_engine_metrics.py  test_engine_stubs.py  test_engine_train.py  test_losses_conformal.py  test_losses_losses.py  test_models_blocks.py  test_models_grid.py  test_models_heads.py  test_models_pharosnet.py  test_models_temporal.py  test_reveal_aligner.py  test_reveal_data_dataset.py  test_reveal_data_metrics.py  test_reveal_data_synthesis.py  test_reveal_memory.py  test_reveal_revealnet.py  test_reveal_train_config.py  test_reveal_train_losses.py  test_reveal_train_overlay.py  test_rt_bench.py  test_rt_export.py  test_rt_infer.py  test_rt_overlay.py  test_rt_stub.py  test_teachers_construct.py  test_teachers_ensemble.py  test_teachers_flow.py  test_vivid_discriminator.py  test_vivid_losses.py  test_vivid_train_config.py
(+30 files in other folders)
